objects/CZTerafinaFisMapping__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Custom settings maintains  Terafina Fis Mapping values</description>
    <fields>
        <fullName>FisValue__c</fullName>
        <description>Fis Value</description>
        <encryptionScheme>None</encryptionScheme>
        <label>FIS Value</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TerafinaValue__c</fullName>
        <description>Terafina Value</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Terafina Value</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Mapping Type</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Mapping Type</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Terafina Fis Mapping</label>
</CustomObject>